k8s/ai-platform/mcp-inspector/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: mcp-inspector-ingress
  namespace: mcp-inspector
spec:
  ingressClassName: traefik
  tls:
    - hosts:
        - mcpi.k8s.javydekoning.com
  rules:
    - host: mcpi.k8s.javydekoning.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: mcp-inspector
                port:
                  name: client
